# chopsticks1

./: 1inch69_LCD_test copy.py  1inch69_LCD_test.py  9a01.py  README.md  demo.py  eyes.py  leg_control.py  neck.py  pyproject.toml  run.py  speaker.py  stream.py  tail.py
cad_models/body/: body strut 1.stl  body strut 4.stl  body strut 5.stl  body strut 6.stl  body-strut 2.stl  body-strut 3.stl  cs1-body bottom.stl  cs1main body-top.stl
cad_models/head-pan&tilt/: Arms-mg90s.stl  Base.stl  Pan_Servo_Base-mg90s.stl  Tilt-foxeer-hs-1172v2.stl  strut.stl
face/: robot_face.py
trials/: test_servo.py
