[project]
name = "chopsticks1"
version = "1"
description = "this is a project to create a robot pet. A small LLM will be used to act as its brain"
authors = [
    {name = "kamal"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
