[project]
name = "chopsticks1"
version = "1"
description = "this is a project to create a robot pet. A small LLM will be used to act as its brain"
authors = [
    {name = "kamal"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spidev (>=3.6,<4.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "numpy (>=2.2.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
